{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 150,
  "lineage": "f5bf3b6a-6ac6-de76-e51b-12e852fc6f2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jump_box_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e11033f202d43c8e",
            "association_id": "eipassoc-0ad7045c605c5aab1",
            "domain": "vpc",
            "id": "eipalloc-0e11033f202d43c8e",
            "instance": "i-0dfc2ae222414efd2",
            "network_border_group": "us-west-1",
            "network_interface": "eni-02397ff4fbbee0ccf",
            "private_dns": "ip-10-10-1-10.us-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "public_dns": "ec2-54-193-43-220.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.43.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Jump Box",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Jump Box",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba1cd23bccdad1c2",
            "association_id": "eipassoc-0c3f1f9aaee36ad5d",
            "domain": "vpc",
            "id": "eipalloc-0ba1cd23bccdad1c2",
            "network_border_group": "us-west-1",
            "network_interface": "eni-091df3ebb4695c149",
            "private_dns": "ip-10-10-1-46.us-west-1.compute.internal",
            "private_ip": "10.10.1.46",
            "public_dns": "ec2-52-52-102-147.us-west-1.compute.amazonaws.com",
            "public_ip": "52.52.102.147",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for VPC-1: Nat Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for VPC-1: Nat Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP-VPC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ef1caa6023cc8ec",
            "association_id": "eipassoc-0b5710ef0d1364e95",
            "domain": "vpc",
            "id": "eipalloc-09ef1caa6023cc8ec",
            "network_border_group": "us-west-1",
            "network_interface": "eni-066b30e6d467c59ab",
            "private_dns": "ip-10-20-1-71.us-west-1.compute.internal",
            "private_ip": "10.20.1.71",
            "public_dns": "ec2-52-52-108-58.us-west-1.compute.amazonaws.com",
            "public_ip": "52.52.108.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for VPC-2: Nat Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP for VPC-2: Nat Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nginx_kibana_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a52e3d753d752e6b",
            "association_id": "eipassoc-0ecaccd96cf716469",
            "domain": "vpc",
            "id": "eipalloc-0a52e3d753d752e6b",
            "instance": "i-0e4635edf4d36af5b",
            "network_border_group": "us-west-1",
            "network_interface": "eni-04a719916d84687cf",
            "private_dns": "ip-10-10-1-20.us-west-1.compute.internal",
            "private_ip": "10.10.1.20",
            "public_dns": "ec2-54-241-26-212.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.26.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Kibana Nginx Web Server",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Kibana Nginx Web Server",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wordpress_box_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06efb9b4e8e7bd7e7",
            "association_id": "eipassoc-0a2f5a0ddbc9fb6b0",
            "domain": "vpc",
            "id": "eipalloc-06efb9b4e8e7bd7e7",
            "instance": "i-0402676da06d0d190",
            "network_border_group": "us-west-1",
            "network_interface": "eni-09aeb3196350cba37",
            "private_dns": "ip-10-10-1-15.us-west-1.compute.internal",
            "private_ip": "10.10.1.15",
            "public_dns": "ec2-13-52-208-167.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.208.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Wordpress",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Elastic IP to use with Wordpress",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elk_box",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0006957e570b16592",
            "arn": "arn:aws:ec2:us-west-1:250281069813:instance/i-0b1bfbe729f016cb3",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1bfbe729f016cb3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-06972f59b145e6f55"
              }
            ],
            "primary_network_interface_id": "eni-06972f59b145e6f55",
            "private_dns": "ip-10-20-2-20.us-west-1.compute.internal",
            "private_ip": "10.20.2.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09036939024a11c72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c5f577647ed731c",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595 - Elastic Search / Kibana",
              "Team": "John Afreen Jawad Usman",
              "cloud-watch-agent": "true"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595 - Elastic Search / Kibana",
              "Team": "John Afreen Jawad Usman",
              "cloud-watch-agent": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01e6b1cb6d723b248",
              "sg-08895b4a634a546ae"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic-elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_box",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02eb1685adb70eb60",
            "arn": "arn:aws:ec2:us-west-1:250281069813:instance/i-0dfc2ae222414efd2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfc2ae222414efd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02397ff4fbbee0ccf"
              }
            ],
            "primary_network_interface_id": "eni-02397ff4fbbee0ccf",
            "private_dns": "ip-10-10-1-10.us-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "public_ip": "54.193.43.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d0b48905b50668cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0208d49971cb442ca",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595 - Jump Box",
              "Team": "John Afreen Jawad Usman",
              "cloud-watch-agent": "true"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595 - Jump Box",
              "Team": "John Afreen Jawad Usman",
              "cloud-watch-agent": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066b54f0b92b4fff6"
            ]
          },
          "dependencies": [
            "aws_network_interface.jumpbox-nic-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c4aec627a4f0b92",
            "arn": "arn:aws:ec2:us-west-1:250281069813:instance/i-0e4635edf4d36af5b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4635edf4d36af5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04a719916d84687cf"
              }
            ],
            "primary_network_interface_id": "eni-04a719916d84687cf",
            "private_dns": "ip-10-10-1-20.us-west-1.compute.internal",
            "private_ip": "10.10.1.20",
            "public_ip": "54.241.26.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00ba8b999d662fc95",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0208d49971cb442ca",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595 - Kibana Nginx Server",
              "Team": "John Afreen Jawad Usman",
              "cloud-watch-agent": "true"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595 - Kibana Nginx Server",
              "Team": "John Afreen Jawad Usman",
              "cloud-watch-agent": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00dff58caa483c11a",
              "sg-0b163ba29c8c250af"
            ]
          },
          "dependencies": [
            "aws_network_interface.nginx_kibana_nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f666a312b29931",
            "arn": "arn:aws:ec2:us-west-1:250281069813:instance/i-0402676da06d0d190",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0402676da06d0d190",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "aws_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09aeb3196350cba37"
              }
            ],
            "primary_network_interface_id": "eni-09aeb3196350cba37",
            "private_dns": "ip-10-10-1-15.us-west-1.compute.internal",
            "private_ip": "10.10.1.15",
            "public_ip": "13.52.208.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-032b1cb2b285de936",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0208d49971cb442ca",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595 - WordPress Instance 1",
              "Team": "John Afreen Jawad Usman",
              "cloud-watch-agent": "true"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595 - WordPress Instance 1",
              "Team": "John Afreen Jawad Usman",
              "cloud-watch-agent": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00dff58caa483c11a",
              "sg-0b163ba29c8c250af"
            ]
          },
          "dependencies": [
            "aws_network_interface.wordpress-nic-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:internet-gateway/igw-0527c0b004910c755",
            "id": "igw-0527c0b004910c755",
            "owner_id": "250281069813",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Internet Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Internet Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:internet-gateway/igw-0c8e64f6050ff41c4",
            "id": "igw-0c8e64f6050ff41c4",
            "owner_id": "250281069813",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Internet Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Internet Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-04f86a7e608036d08"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba1cd23bccdad1c2",
            "connectivity_type": "public",
            "id": "nat-0bd2ea3710b74540f",
            "network_interface_id": "eni-091df3ebb4695c149",
            "private_ip": "10.10.1.46",
            "public_ip": "52.52.102.147",
            "subnet_id": "subnet-0208d49971cb442ca",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Nat Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Nat Gateway",
              "Team": "John Afreen Jawad Usman"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ef1caa6023cc8ec",
            "connectivity_type": "public",
            "id": "nat-0d48fdacd373550e8",
            "network_interface_id": "eni-066b30e6d467c59ab",
            "private_ip": "10.20.1.71",
            "public_ip": "52.52.108.58",
            "subnet_id": "subnet-0c639ea50894da2f3",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Nat Gateway",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Nat Gateway",
              "Team": "John Afreen Jawad Usman"
            }
          },
          "dependencies": [
            "aws_eip.nateIP-VPC2",
            "aws_subnet.vpc2_pub_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-priv-vpc-subnet-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:network-acl/acl-079d5c37957d93e98",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-079d5c37957d93e98",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "250281069813",
            "subnet_ids": [
              "subnet-05c5f577647ed731c"
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-04f86a7e608036d08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-priv-vpc-subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:network-acl/acl-0d211fa2bca8ca588",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d211fa2bca8ca588",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "250281069813",
            "subnet_ids": [
              "subnet-0c639ea50894da2f3"
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC2: ACL DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC2: ACL DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-04f86a7e608036d08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-pub-vpc-subnet-external-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:network-acl/acl-03c5b02cf039faa4d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03c5b02cf039faa4d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "250281069813",
            "subnet_ids": [
              "subnet-0208d49971cb442ca"
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl-pub-vpc-subnet-internal-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:network-acl/acl-0e1dbf4cc127d8c1a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e1dbf4cc127d8c1a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "250281069813",
            "subnet_ids": [
              "subnet-0f3d6704f2e77e140"
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC1: ACL Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "external-1-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0026459104067d734",
            "network_acl_id": "acl-03c5b02cf039faa4d",
            "subnet_id": "subnet-0208d49971cb442ca"
          },
          "dependencies": [
            "aws_network_acl.acl-pub-vpc-subnet-external-1",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "internal-1-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0a9c7c9890cbf6274",
            "network_acl_id": "acl-0e1dbf4cc127d8c1a",
            "subnet_id": "subnet-0f3d6704f2e77e140"
          },
          "dependencies": [
            "aws_network_acl.acl-pub-vpc-subnet-internal-1",
            "aws_subnet.priv_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "main-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0a5a564befb5d0b37",
            "network_acl_id": "acl-079d5c37957d93e98",
            "subnet_id": "subnet-05c5f577647ed731c"
          },
          "dependencies": [
            "aws_network_acl.acl-priv-vpc-subnet-main",
            "aws_subnet.main_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "vpc2-pub-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00442eed96dc9947b",
            "network_acl_id": "acl-0d211fa2bca8ca588",
            "subnet_id": "subnet-0c639ea50894da2f3"
          },
          "dependencies": [
            "aws_network_acl.acl-priv-vpc-subnet-pub",
            "aws_subnet.vpc2_pub_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jumpbox-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:network-interface/eni-02397ff4fbbee0ccf",
            "attachment": [
              {
                "attachment_id": "eni-attach-021b4493153bb167d",
                "device_index": 0,
                "instance": "i-0dfc2ae222414efd2"
              }
            ],
            "id": "eni-02397ff4fbbee0ccf",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:9f:7e:d7:67:8b",
            "owner_id": "250281069813",
            "private_ip": "10.10.1.10",
            "private_ip_list": [
              "10.10.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-066b54f0b92b4fff6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0208d49971cb442ca",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Jump Box - Primary Network Interface",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Jump Box - Primary Network Interface",
              "Team": "John Afreen Jawad Usman"
            }
          },
          "dependencies": [
            "aws_security_group.ssh-from-anywhere",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nginx_kibana_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:network-interface/eni-04a719916d84687cf",
            "attachment": [
              {
                "attachment_id": "eni-attach-006dd6bbe1aae8572",
                "device_index": 0,
                "instance": "i-0e4635edf4d36af5b"
              }
            ],
            "id": "eni-04a719916d84687cf",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:0d:25:1c:56:a3",
            "owner_id": "250281069813",
            "private_ip": "10.10.1.20",
            "private_ip_list": [
              "10.10.1.20"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00dff58caa483c11a",
              "sg-0b163ba29c8c250af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0208d49971cb442ca",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "Nginx Kibana -Primary Network Interface",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "Nginx Kibana -Primary Network Interface",
              "Team": "John Afreen Jawad Usman"
            }
          },
          "dependencies": [
            "aws_security_group.ssh-from-jumpbox-pub",
            "aws_security_group.web-access-from-anywhere",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic-elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:network-interface/eni-06972f59b145e6f55",
            "attachment": [
              {
                "attachment_id": "eni-attach-0a311abd69d4ee479",
                "device_index": 0,
                "instance": "i-0b1bfbe729f016cb3"
              }
            ],
            "id": "eni-06972f59b145e6f55",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:38:38:de:f2:e7",
            "owner_id": "250281069813",
            "private_ip": "10.20.2.20",
            "private_ip_list": [
              "10.20.2.20"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.20.2.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01e6b1cb6d723b248",
              "sg-08895b4a634a546ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c5f577647ed731c",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "ELK -Primary Network Interface",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "ELK -Primary Network Interface",
              "Team": "John Afreen Jawad Usman"
            }
          },
          "dependencies": [
            "aws_security_group.elk-from-public",
            "aws_security_group.ssh-from-jumpbox",
            "aws_subnet.main_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "wordpress-nic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:network-interface/eni-09aeb3196350cba37",
            "attachment": [
              {
                "attachment_id": "eni-attach-09fa4bfe11d14d0be",
                "device_index": 0,
                "instance": "i-0402676da06d0d190"
              }
            ],
            "id": "eni-09aeb3196350cba37",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:8b:39:da:82:21",
            "owner_id": "250281069813",
            "private_ip": "10.10.1.15",
            "private_ip_list": [
              "10.10.1.15"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.15"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00dff58caa483c11a",
              "sg-0b163ba29c8c250af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0208d49971cb442ca",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "WordPress Web Server - Primary Network Interface",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "WordPress Web Server - Primary Network Interface",
              "Team": "John Afreen Jawad Usman"
            }
          },
          "dependencies": [
            "aws_security_group.ssh-from-jumpbox-pub",
            "aws_security_group.web-access-from-anywhere",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-main-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e0366e0a9e83fc9519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e0366e0a9e83fc9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-033475f8f933b51c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02686c857658f08d4519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02686c857658f08d4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-033475f8f933b51c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.RT",
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-route-public-vpc-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a5b1b11ab319c822662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a5b1b11ab319c822",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-033475f8f933b51c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc2-inside-network-via-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02686c857658f08d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d48fdacd373550e8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02686c857658f08d4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP-VPC2",
            "aws_nat_gateway.NATgw-vpc2",
            "aws_route_table.RT",
            "aws_subnet.vpc2_pub_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:route-table/rtb-0a0a8da1557298cd9",
            "id": "rtb-0a0a8da1557298cd9",
            "owner_id": "250281069813",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bd2ea3710b74540f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:route-table/rtb-0fbd7fb00e945342b",
            "id": "rtb-0fbd7fb00e945342b",
            "owner_id": "250281069813",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0527c0b004910c755",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.20.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-033475f8f933b51c5"
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:route-table/rtb-08d2349676b15ec24",
            "id": "rtb-08d2349676b15ec24",
            "owner_id": "250281069813",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0527c0b004910c755",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT Network in second AZ",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: RT Network in second AZ",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:route-table/rtb-02686c857658f08d4",
            "id": "rtb-02686c857658f08d4",
            "owner_id": "250281069813",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d48fdacd373550e8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-033475f8f933b51c5"
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: RT Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: RT Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f86a7e608036d08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vcp2-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:route-table/rtb-0df0a2c5dd119d3c0",
            "id": "rtb-0df0a2c5dd119d3c0",
            "owner_id": "250281069813",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8e64f6050ff41c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: RT DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: RT DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f86a7e608036d08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-vpc2",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a936c025facd863",
            "route_table_id": "rtb-0a0a8da1557298cd9",
            "subnet_id": "subnet-0f3d6704f2e77e140"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.priv_subnet",
            "aws_subnet.pub_subnet",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7cb1625ea264e3a",
            "route_table_id": "rtb-0fbd7fb00e945342b",
            "subnet_id": "subnet-0208d49971cb442ca"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.pub_subnet",
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC",
            "aws_vpc_peering_connection.vpc-peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c71289290fbce86c",
            "route_table_id": "rtb-08d2349676b15ec24",
            "subnet_id": "subnet-08956b1878893fc3a"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT_2",
            "aws_subnet.pub_subnet_2",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a09da9640b538ab2",
            "route_table_id": "rtb-02686c857658f08d4",
            "subnet_id": "subnet-05c5f577647ed731c"
          },
          "dependencies": [
            "aws_route_table.RT",
            "aws_subnet.main_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc2_pub_subnet-vcp2-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b618e14843d0736",
            "route_table_id": "rtb-0df0a2c5dd119d3c0",
            "subnet_id": "subnet-0c639ea50894da2f3"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-vpc2",
            "aws_route_table.vcp2-pub-rt",
            "aws_subnet.vpc2_pub_subnet",
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk-from-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:security-group/sg-08895b4a634a546ae",
            "description": "ELK access from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08895b4a634a546ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "VPC2:ELK access from public",
            "name_prefix": "",
            "owner_id": "250281069813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "ELK Access from public subnet",
              "Name": "VPC2: ELK Access",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "ELK Access from public subnet",
              "Name": "VPC2: ELK Access",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f86a7e608036d08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:security-group/sg-026c3d032aaa33b45",
            "description": "MySQL (RDS) access for wordpress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026c3d032aaa33b45",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.15/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "VPC1:MySQL Access",
            "name_prefix": "",
            "owner_id": "250281069813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "MySQL access",
              "Name": "VPC1:MySQL Access",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "MySQL access",
              "Name": "VPC1:MySQL Access",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-from-anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:security-group/sg-066b54f0b92b4fff6",
            "description": "SSH access from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066b54f0b92b4fff6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC1:SSH Access from Anywhere",
            "name_prefix": "",
            "owner_id": "250281069813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from internet",
              "Name": "VPC1:SSH Access from Anywhere",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from internet",
              "Name": "VPC1:SSH Access from Anywhere",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-from-jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:security-group/sg-01e6b1cb6d723b248",
            "description": "SSH access from Jump Box",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e6b1cb6d723b248",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.10/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC2:SSH Access From Jumpbox",
            "name_prefix": "",
            "owner_id": "250281069813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC2:SSH Access From Jumpbox",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC2:SSH Access From Jumpbox",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f86a7e608036d08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-from-jumpbox-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:security-group/sg-00dff58caa483c11a",
            "description": "SSH access from Jump Box",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dff58caa483c11a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.10/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC1:SSH Access From Jumpbox",
            "name_prefix": "",
            "owner_id": "250281069813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC2:SSH Access From Jumpbox",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC2:SSH Access From Jumpbox",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-access-from-anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:security-group/sg-0b163ba29c8c250af",
            "description": "HTTP access to public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b163ba29c8c250af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "VPC1:HTTP Access From Internet",
            "name_prefix": "",
            "owner_id": "250281069813",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC1:HTTP Access From Internet",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Description": "SSH access from jumpbox",
              "Name": "VPC1:HTTP Access From Internet",
              "Team": "John Afreen Jawad Usman"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:subnet/subnet-05c5f577647ed731c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c5f577647ed731c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250281069813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-04f86a7e608036d08"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:subnet/subnet-0f3d6704f2e77e140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3d6704f2e77e140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250281069813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Inside Network",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:subnet/subnet-0208d49971cb442ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0208d49971cb442ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250281069813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:subnet/subnet-08956b1878893fc3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08956b1878893fc3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250281069813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Network in second AZ",
              "Note": "Created to meet RDS requirements i.e. subnets need to be in multiple AZ",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-1: Network in second AZ",
              "Note": "Created to meet RDS requirements i.e. subnets need to be in multiple AZ",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "dependencies": [
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc2_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:subnet/subnet-0c639ea50894da2f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c639ea50894da2f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250281069813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC-2: DMZ Network",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-04f86a7e608036d08"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PrivateVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:vpc/vpc-04f86a7e608036d08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0be77c662d562d1f9",
            "default_route_table_id": "rtb-01e0366e0a9e83fc9",
            "default_security_group_id": "sg-0901906d3c8996f48",
            "dhcp_options_id": "dopt-fd436798",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04f86a7e608036d08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e0366e0a9e83fc9",
            "owner_id": "250281069813",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-2",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-2",
              "Team": "John Afreen Jawad Usman"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PublicVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:250281069813:vpc/vpc-0f86d00507f27c6cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06ef1f68a5b395877",
            "default_route_table_id": "rtb-0a5b1b11ab319c822",
            "default_security_group_id": "sg-0faf9fc3b461fe44d",
            "dhcp_options_id": "dopt-fd436798",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f86d00507f27c6cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5b1b11ab319c822",
            "owner_id": "250281069813",
            "tags": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-1",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "595-VPC-1",
              "Team": "John Afreen Jawad Usman"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc-peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-033475f8f933b51c5",
            "peer_owner_id": "250281069813",
            "peer_region": "us-west-1",
            "peer_vpc_id": "vpc-04f86a7e608036d08",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Author": "Usman Aslam",
              "Name": "VPC Peering between public and private VPCs",
              "Team": "John Afreen Jawad Usman"
            },
            "tags_all": {
              "Author": "Usman Aslam",
              "Name": "VPC Peering between public and private VPCs",
              "Team": "John Afreen Jawad Usman"
            },
            "vpc_id": "vpc-0f86d00507f27c6cd"
          },
          "dependencies": [
            "aws_vpc.PrivateVPC",
            "aws_vpc.PublicVPC"
          ]
        }
      ]
    }
  ]
}